[package]
name = "petclinic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
axum = { version = "0.5.13", features = ["query"] }
axum-extra = {version= "0.3.4", features = ["cookie", "form"] }
hyper = "0.14.20" 
tokio = {version= "1.16.1",  features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = "0.4.20"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }
async-trait = "0.1.51"
tera = "1"
sha-1 = "0.10.0"
redis = "0.21.5"
rand = "0.8.5"
rbson = "2.0"
sqlx = { version = "0.5",  features = [ "mysql", "runtime-async-std-native-tls" ]  }
rbatis = { version = "3.1", default-features = false, features = ["mysql"] }

